--- a/frontend/source/index.html
+++ b/frontend/source/index.html
@@ -11,12 +11,7 @@
     <title>Application is loading...</title>
   </head>
   <body>
-
-    <noscript>
-      Please enable JavaScript for proper application load.
-    </noscript>
-
+    <noscript>Please enable JavaScript for proper application load.</noscript>
     <div id='root'></div>
-
   </body>
 </html>
